// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders checked 1`] = `
<View
  style={undefined}
>
  <Switch
    onTintColor="rgba(0, 151, 157, 1)"
    onValueChange={[Function]}
    style={undefined}
    value={true}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`renders not checked 1`] = `
<View
  style={undefined}
>
  <Switch
    onTintColor="rgba(0, 151, 157, 1)"
    onValueChange={[Function]}
    style={undefined}
    value={false}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;
